--- a/Toothgrowth Analysis.Rmd
+++ b/Toothgrowth Analysis.Rmd
@@ -2,7 +2,7 @@
 title: "Statistical Inference - Simulation project"
 author: "H.Harvey"
 date: "25 December 2015"
-output: pdf_document
+output: word_document
 ---
 ```{r setoption, echo=FALSE}
 library(knitr)
@@ -10,25 +10,39 @@ opts_chunk$set(echo = TRUE)
 ```
 
 ## Introduction
-The purpose of this project is to investigate the exponential distribution in R and compare it with the Central Limit Theorem. 
+The purpose of this project is to investigate the exponential distribution in R and compare it with the Central Limit Theorem. The exponential distribution can be simulated in R with rexp(n, lambda) where lambda is the rate parameter. The mean of exponential distribution is 1/lambda and the standard deviation is also 1/lambda. Set lambda = 0.2 for all of the simulations. You will investigate the distribution of averages of 40 exponentials.
+
+## Setting the variables
+```{r}
+## R Preparation for reproducible results
+set.seed(10)
+# set lambda to 0.2
+lambda <- 0.2
+# 40 samples
+Num_Sample <- 40
+# 1000 simulations
+Num_Sim <- 1000
+```
 
 ## Calculations of the sample mean
 ```{r}
-set.seed(10) # R Preparation for reproducible results
-lambda <- 0.2 # set lambda to 0.2
-Num_Sample <- 40 # 40 samples
-Num_Sim <- 1000 # 1000 simulations
+# Replicate 1000 instances of the random 40 exponentials
 Sim_Exp <- replicate(Num_Sim, rexp(Num_Sample, lambda))
-mean_Sim_Exp <- apply(Sim_Exp, 2, mean) # Calculate the mean of the sample of exponentials
-mean_Sample <- mean(mean_Sim_Exp) # Calculate the mean of the sample mean
-mean_Theory <- 1/lambda # Calculate the theoritical mean
+# Calculate the mean of the sample of exponentials
+mean_Sim_Exp <- apply(Sim_Exp, 2, mean)
+# Calculate the mean of the sample mean
+mean_Sample <- mean(mean_Sim_Exp)
+# Calculate the theoritical mean
+mean_Theory <- 1/lambda
 ```
 
 ## Graphical representation of the central/theoritical mean
-```{r,out.width=".50\\linewidth"}
+```{r}
 # Represent the sample mean distribution
 hist(mean_Sim_Exp, breaks=50, xlab = "Mean", main = "Sample mean distributions")
+# Represent the sample mean of the random simulation
 abline(v = mean_Sample , col = "blue")
+# Represent the theoritical mean
 abline(v = mean_Theory, col = "orange")
 legend('topright', c("Simulation mean", "Theoretical mean"),
        lty=c(1,1), col=c("blue", "orange"))
@@ -61,19 +75,23 @@ var_Theory
 The standard variation is 0.798 where the theoeritical standard deviation is calculated at 0.791. The variance of sample means is 0.637 where the theoretical variance of the distribution is calculated at 0.625.
 
 ## Graphical representation of the distribution
-```{r,out.width=".50\\linewidth"}
+```{r}
 hist(mean_Sim_Exp, breaks=50, prob=TRUE,
      main="Density Simulation",
      xlab="")
 # Calculate and identify the density of the sample mean
 lines(density(mean_Sim_Exp), col="blue")
+# Identify the mean of the sample mean
 abline(v=mean(mean_Sim_Exp), col="blue")
+# Identify the theoretical mean
 abline(v=1/lambda, col="orange")
 
 # Calculate the theoretical density of the averages of samples
 xfit <- seq(min(mean_Sim_Exp), max(mean_Sim_Exp), length=100)
 yfit <- dnorm(xfit, mean=mean_Theory, sd=stddev_Theory)
 lines(xfit, yfit, pch=22, col="orange", lty=2)
+
+# Legend
 legend('topright', c("Simulation distribution", "Theoretical distribution"),
        lty=c(1,2), col=c("blue", "orange"))
 ```
@@ -81,7 +99,7 @@ legend('topright', c("Simulation distribution", "Theoretical distribution"),
 As represented in the graph, the mean of the random sampled exponantials distributions overlaps with the theoritical mean of the distribution, due to the Central Limit Theorem.
 
 ## Validation
-```{r,fig.width=4,fig.height=3}
+```{r}
 qqnorm(mean_Sim_Exp)
 qqline(mean_Sim_Exp, col = 2)
 ```
